# EEVop

./: CHANGELOG.md  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/eevop/: __init__.py
src/sleevop/: __init__.py
tests/: test_eevop.py  test_sleevop.py
