[tool.poetry]
name = "sleevop"
version = "2023.04.03.post1"
description = "SleeVop: open-source Python package to analyse sleep envelope synchronization."
authors = ["Simon J. Guillot"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
[tool.semantic_release]
version_toml = [
	"pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
